Fix Cover Flow: consistent album sizes + show all asset types in backside
- Wrap coverflow artwork in a clipping container (.coverflow-artwork-wrapper)
  to prevent zoomed/scaled cover images from overflowing the 8em x 8em box
- Remove type filter in showBackside() so all children are shown (links,
  photo albums, videos, folders) not just songs
- Handle selection of non-song items: links open in new tab, folders/
  photo_albums/videos navigate into the main app
- Update onBack callback to accept optional navigateToNode parameter

--- a/css/styles.css
+++ b/css/styles.css
@@ -889,11 +889,11 @@ a {
   -webkit-box-reflect: none;
 }
 
-.coverflow-album.selected .coverflow-artwork {
+.coverflow-album.selected .coverflow-artwork-wrapper {
   opacity: 0;
 }
 
-.coverflow-album.playing .coverflow-artwork {
+.coverflow-album.playing .coverflow-artwork-wrapper {
   opacity: 1;
 }
 
@@ -901,16 +901,23 @@ a {
   opacity: 0;
 }
 
-.coverflow-artwork {
+.coverflow-artwork-wrapper {
   position: absolute;
   height: 8em;
   width: 8em;
-  transition: opacity 0.5s;
-  object-fit: cover;
+  overflow: hidden;
   border: 1px solid #555;
 }
 
+.coverflow-artwork {
+  height: 100%;
+  width: 100%;
+  transition: opacity 0.5s;
+  object-fit: cover;
+}
+
 .coverflow-artwork:not(img) {
+  position: absolute;
   top: 0;
   left: 0;
 }
